--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section id="hero" class="hero-section">
             <div class="hero-content">
-                <img src="images\-1.jpg" class="hero-image">
+                <img src="images\profile.jpg" class="hero-image">
                 <div class="hero-text">
                     <h2>John Mark Panataleon</h2>
                     <p>As a student I'm always learning and exploring. It's about getting smarter amd making new friends along the way.</p>
@@ -118,3 +118,4 @@
     </footer>
 </body>
 </html>
+
